objects/Event_Recipes_Demo__e.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>This is the Salesforce Account Id that we should attach the image to.</description>
        <label>Account Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <description>This field holds the image url to be added.</description>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Event Recipes Demo</label>
    <pluralLabel>Event Recipes Demo</pluralLabel>
</CustomObject>